infra/timeweb/10-gitops/apps/frontend/landing/landing.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing
  namespace: platform
  annotations:
    argocd.argoproj.io/sync-wave: "65"
  labels:
    app: landing
spec:
  selector:
    app: landing
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
